DietPi-Sync | Sync location: now has a list option, which allows user to select from all active mounts on system: https://github.com/Fourdee/DietPi/issues/751#issuecomment-281689544
General | Odroids: Changed from http://oph.mdrjr.net/meveric to our new mirror http://fuzon.co.uk/meveric for Meverics repo.

Bug fixes:
DietPi-Software | Resolved an issue with NAA Daemon failing to install, due to URL links being dropped for stretch packages in Debian repo, again. These binaries are now permanently hosted on DietPi.com: https://github.com/Fourdee/DietPi/issues/754
DietPi-Config | Sound card: Allo Cheapo, now sets the correct device index when running under optical out mode. Many thanks to Sudeep for the fix:

RPi Stretch:
DietPi-Drive_Manager | No longer hangs when launched: https://github.com/Fourdee/DietPi/issues/751#issuecomment-280850954

-----------------------------------------------------------------------------------------------------------

v144
(16/02/17)

Changes / Improvements / Optimizations:
DietPi-Config | Audio > Sound card: Added support for Allo Boss DAC: https://github.com/Fourdee/DietPi/issues/748
DietPi-Config | Audio > PSU Noise Reduction: This mode attempts to reduce power consumption on your SBC. In turn, this may reduce PSU inflicted noise, that may degrade audio output quality. When enabled, the following is set CPU gov = Powersave, HDMI output = Disabled: https://github.com/Fourdee/DietPi/issues/757
DietPi-Software | AmiBerry (uae4arm): Updated to latest version (2.1): https://github.com/Fourdee/DietPi/issues/756
DietPi-Software | DietPiCam: Updated to latest version (6.2.29). To update existing installations, this requires a reinstall: https://github.com/Fourdee/DietPi/issues/737
DietPi-Software | Roon Bridge updated to v1.3. Now includes support for ARM64 devices (eg: Odroid C2/Pine A64): https://github.com/Fourdee/DietPi/issues/749