@@ -3981,11 +3981,11 @@ _EOF_
 					# - Debian
 					else
 
-						whiptail_menu_array+=("http://ftp.debian.org/debian" "Global")
-						whiptail_menu_array+=("http://ftp.uk.debian.org/debian" "UK")
-						whiptail_menu_array+=("http://ftp.us.debian.org/debian" "US")
-						whiptail_menu_array+=("http://ftp.cn.debian.org/debian" "China")
-						whiptail_menu_array+=("http://ftp.au.debian.org/debian" "Australia")
+						whiptail_menu_array+=("http://ftp.debian.org/debian/" "Global")
+						whiptail_menu_array+=("http://ftp.uk.debian.org/debian/" "UK")
+						whiptail_menu_array+=("http://ftp.us.debian.org/debian/" "US")
+						whiptail_menu_array+=("http://ftp.cn.debian.org/debian/" "China")
+						whiptail_menu_array+=("http://ftp.au.debian.org/debian/" "Australia")
 
 					fi
 
