@@ -3918,7 +3918,6 @@ _EOF_
 				fi
 
 				#	NB: PiHole currently replaces the lighttpd.conf file entirly and restricts webserver use to PiHole only. We dont want a limited webserver dedicated to PiHole, so lets avoid it.
-				#	+ Read only, prevent pihole -up from replacing also
 				mv /etc/lighttpd/lighttpd.conf /etc/lighttpd/lighttpd.conf.bak &> /dev/null
 
 				# - Install
@@ -9324,9 +9323,7 @@ _EOF_
 			#RPi
 			if (( $HW_MODEL < 10 )); then
 
-				sed -i "/gpu_mem_256=/c\gpu_mem_256=$gpu_memory" /DietPi/config.txt
-				sed -i "/gpu_mem_512=/c\gpu_mem_512=$gpu_memory" /DietPi/config.txt
-				sed -i "/gpu_mem_1024=/c\gpu_mem_1024=$gpu_memory" /DietPi/config.txt
+				/DietPi/dietpi/func/dietpi-set_hardware gpumemsplit $gpu_memory
 
 			fi
 
@@ -11434,7 +11431,7 @@ _EOF_
 
 					OPTION=$(whiptail --title "$WHIP_TITLE" --menu "Choose where to store your user data. User data includes software such as Owncloud data store, BitTorrent downloads etc\n\nMore information on user data in DietPi:\n - http://dietpi.com/phpbb/viewtopic.php?f=8&t=478&p=2087\n\n> DietPi-Drive Manager\nLaunch DietPi-Drive Manager to setup external drives, and, move user data to different locations." --cancel-button "Back" 20 100 3 \
 					"Drive Manager" "Launches DietPi-Drive Manager" \
-					"List" "Select from a list of available mounts/drives" \
+					"List" "Select from a list of available mounts/drives, to move user data" \
 					"Custom" "Input a manual location to move user data" 3>&1 1>&2 2>&3)
 					CHOICE=$?
 
