@@ -713,6 +713,12 @@ _EOF_
 			# - Swap input axis
 			sed -i '/"SwapAxes"/c\        Option  "SwapAxes"      "1"' /etc/X11/xorg.conf.d/99-waveshare32_calibration.conf
 
+			# - Use FBturbo
+			sed -i '/^Driver/c\Driver    "fbturbo"' /etc/X11/xorg.conf.d/99-waveshare32_xorg.conf
+
+			# - Move fb0 xorg.conf out the way: https://github.com/Fourdee/DietPi/issues/767
+			mv /usr/share/X11/xorg.conf.d/99-fbturbo.conf /usr/share/X11/99-fbturbo.conf
+
 		#Odroids
 		elif (( $HW_MODEL >= 10 && $HW_MODEL < 20 )); then
 
@@ -787,6 +793,9 @@ _EOF_
 			# - Leave these enabled, just incase the user has other hardware that may use them.
 			#sed -i "/dtparam=i2c_arm=/c\dtparam=i2c_arm=on" "$FP_RPI_CONFIG"
 			#sed -i "/dtparam=spi=/c\dtparam=spi=on" "$FP_RPI_CONFIG"
+
+			# - Move fb0 xorg.conf back: https://github.com/Fourdee/DietPi/issues/767
+			mv /usr/share/X11/99-fbturbo.conf /usr/share/X11/xorg.conf.d/99-fbturbo.conf
 
 		#Odroids
 		elif (( $HW_MODEL >= 10 && $HW_MODEL < 20 )); then
