@@ -2347,6 +2347,9 @@ _EOF_
 
 		fi
 		#-------------------------------------------------------------------------------
+		#Debian apt mirror fix: https://github.com/Fourdee/DietPi/issues/755
+		sed -i "s@debian.org/debian[[:space:]]@debian.org/debian/ @g" /etc/apt/sources.list
+		#-------------------------------------------------------------------------------
 
 	fi
 
