@@ -13,8 +13,10 @@ DietPi-Sync | Sync location: now has a list option, which allows user to select 
 General | Odroids: Changed from http://oph.mdrjr.net/meveric to our new mirror http://fuzon.co.uk/meveric for Meverics repo.
 
 Bug fixes:
+DietPi-Software | Resolved an issue where internet connection test would fail, due to 404 recieved from http://ftp.debian.org/debian. Many thanks to @tohjg for the fix: https://github.com/Fourdee/DietPi/issues/755#issuecomment-282203823
 DietPi-Software | Resolved an issue with NAA Daemon failing to install, due to URL links being dropped for stretch packages in Debian repo, again. These binaries are now permanently hosted on DietPi.com: https://github.com/Fourdee/DietPi/issues/754
 DietPi-Config | Sound card: Allo Cheapo, now sets the correct device index when running under optical out mode. Many thanks to Sudeep for the fix:
+DietPi-Config | Resolved an issue with WaveShare32 on RPi failing to run X: https://github.com/Fourdee/DietPi/issues/767
 
 RPi Stretch:
 DietPi-Drive_Manager | No longer hangs when launched: https://github.com/Fourdee/DietPi/issues/751#issuecomment-280850954
